ffmpeg (7:2.5.3-2) UNRELEASED; urgency=medium

  * Add patches making the build binary reproducible.
  * Stop using faketime.
  * Correctly handle noopt in DEB_BUILD_OPTIONS.
  * Disable assembler optimizations on ppc64el, because they don't work yet.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Wed, 04 Feb 2015 23:22:30 +0100

ffmpeg (7:2.5.3-1) unstable; urgency=medium

  * Import new upstream bugfix release 2.5.3.
  * Add new av_*_ffversion symbols to the symbols files.
  * Let the test suite continue after the first error.
  * Update copyright year for debian packaging.
  * Re-enable assembler optimizations on armel.
  * Enable x265 on powerpcspe, as it's now available there.
  * Add configure-enable-vsx-together-with-altivec-for-ppc64el.patch to fix
    test failures on ppc64el.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Sat, 10 Jan 2015 11:36:54 +0100

ffmpeg (7:2.5.1-1) unstable; urgency=medium

  * Import new upstream bugfix release 2.5.1.
  * Enable assembler optimizations on ppc64el. They should work now.
  * Enable rtmp on powerpcspe, x265 on hppa and zvbi on hurd and kfreebsd,
    as they are now available there.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Tue, 16 Dec 2014 01:20:40 +0100

ffmpeg (7:2.5-1) unstable; urgency=medium

  * Import new major upstream release 2.5.
  * Update debian/copyright.
  * Add new symbols to the symbols files.
  * Disable rtmp on powerpcspe and sparc64 as librtmp-dev is currently
    uninstallable there.
  * Disable opencv on powerpcspe, as it is currently uninstallable.
  * Enable x265 on mips, mipsel and powerpc, as it's now available there.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Sat, 06 Dec 2014 14:07:28 +0100

ffmpeg (7:2.4.4-1) unstable; urgency=medium

  * New upstream bugfix release 2.4.4.
  * Drop fix-hppa-tests.patch included upstream.
  * Do not enable gnutls on sparc64 and libzvbi on m68k, because they are